crates/zakura-state/src/service/finalized_state/disk_format/tests/snapshots/header_root_auth_frontier_raw_data@mainnet_2.snap
---
source: zakura-state/src/service/finalized_state/disk_format/tests/snapshot.rs
expression: cf_data
---
[
  KV(
    k: "",
    v: "0202000000ed73e297d7c51cb8dc53fc2213d7e2e3f116eb4f26434496fc1926906ca202000000",
  ),
]
